services/app/build/tmp/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tls-ingress
  labels:
    app: nginx
spec:
  tls:
    - hosts:
        - nginxsvc
      secretName: nginxsecret
  rules:
    - host: nginxsvc
      http:
        paths:
          - path: /
            backend:
              serviceName: nginxsvc
              servicePort: 443
